@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.montreal.greek-tv" name="Montreal Greek TV" version="2.3.0" provider-name="Greektimes.ca, Twilight0">
+<addon id="plugin.video.montreal.greek-tv" name="Montreal Greek TV" version="3.0.0" provider-name="Greektimes.ca, Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
-        <import addon="script.module.tulip" version="2.8.17"/>
+        <import addon="script.module.tulip" version="3.0.1"/>
+<!--        <import addon="script.module.scrapetube" version="2.2.2.1"/>-->
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video image audio</provides>
@@ -16,34 +17,15 @@
         <language>en el</language>
         <license>GNU General Public License, v3</license>
         <size>633158</size>
-        <news>[B]2.3.X[/B] - 02-04-2021
+        <news>[B]3.0.X[/B] - 22-07-2022
+- Update live urls
+- Remove non working items
+
+[B]2.3.X[/B] - 02-04-2021
 - Change cache method
 
 [B]2.2.X[/B] - 18-03-2021
-- Some code tweaks
-
-[B]2.1.6[/B] - 29-11-2020
-- Updated youtube api key
-
-[B]2.1.5[/B] - 29-06-2020
-- Updated youtube api key
-
-[B]2.1.4[/B] - 25-03-2019
-- Bumped dependencies
-- Added sort method for youtube videos
-
-[B]2.1.3[/B] - 30-01-2019
-- Corrected radio url
-
-[B]2.1.2[/B] - 30-01-2019
-- Updated video stream url
-
-[B]2.1.1[/B] - 27-01-2019
-- Updated radio stream url
-
-[B]2.1.0[/B] - 14-12-2018
-- Restored transparency for artwork and updated others
-- Moved part of code into lib directory</news>
+- Some code tweaks</news>
         <assets>
             <icon>icon.png</icon>
             <fanart>fanart.jpg</fanart>
