@@ -1,3 +1,7 @@
+[B]3.0.X[/B] - 22-07-2022
+- Update live urls
+- Remove non working items
+
 [B]2.3.X[/B] - 02-04-2021
 - Change cache method
 
